Ajuste base64 image 11